# python-packaging-course

./: .gitignore  working.ipynb
course/analysis1/: analysis1.py
course/analysis2/: analysis2.py
course/tstools-dist/: pyproject.toml  setup.py
course/tstools-dist/tstools/: __init__.py  moments.py
course/tstools-dist/tstools.egg-info/: PKG-INFO  SOURCES.txt
course/tstools-dist/tstools_tdy.egg-info/: PKG-INFO  SOURCES.txt
